--- a/views/employers.html
+++ b/views/employers.html
@@ -27,13 +27,13 @@
                 <ul class="navbar-nav me-auto my-lg-0 navbar-nav-scroll">
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="../events/events.html">Ивенты</a>
+                        <a class="nav-link" href="events">Ивенты</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Работники</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../schedule/index.html">Расписание работников</a>
+                        <a class="nav-link" href="index">Расписание работников</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Запись клиентов</a>
