--- a/views/index.html
+++ b/views/index.html
@@ -64,7 +64,7 @@
     <div class="main">
         <div class="info">
 
-            <select class="employee" name="employee" id="employers" onchange="showEmployer(), remove(), showEvents()">
+            <select class="employee" name="employee" id="employers" onchange="remove(), showEvents()">
                 <option class="option" value="Александр Ли">Александр Ли</option>
                 <option class="option" value="Рахат Би">Рахат Би</option>
                 <option class="option" value="Мадина Ки">Мадина Ки</option>
@@ -73,7 +73,6 @@
                 <option class="option" value="Employee6">Employee6</option>
                 <option class="option" value="Employee7">Employee7</option>
                 <option class="option" value="Employee8">Employee8</option>
-
             </select>
             <div id="field" class="schedule">
 
