--- a/views/signUp.html
+++ b/views/signUp.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SignForm</title>
-    <link rel="stylesheet" href="/public/css/signform.css">
+    <link rel="stylesheet" href="/public/css/signUp.css">
     <script src="jquery.js" type="text/javascript"></script>
     <script src="jquery.maskedinput.js" type="text/javascript"></script>
 </head>
@@ -23,7 +23,7 @@
                 <img src="tw.png" alt="">
             </div>
 
-            <form action="/main" method="get" class="input-group">
+            <form action="/index" method="post" class="input-group">
                 <input type="text" class="input-field" placeholder="ФИО" required>
                 <input type="email" class="input-field" placeholder="Электронная почта" required>
                 <input type="tel" name="tel" pattern="+7[0-9]{3}-[0-9]{3}-[0-9]{4}" class="input-field"
