--- a/views/signUp.html
+++ b/views/signUp.html
@@ -23,12 +23,12 @@
                 <img src="tw.png" alt="">
             </div>
 
-            <form action="/index" method="post" class="input-group">
+            <form action="/signUp" method="post" class="input-group">
                 <input type="text" class="input-field" placeholder="ФИО" required>
-                <input type="email" class="input-field" placeholder="Электронная почта" required>
+                <input type="email" class="input-field" name="email" placeholder="Электронная почта" required>
                 <input type="tel" name="tel" pattern="+7[0-9]{3}-[0-9]{3}-[0-9]{4}" class="input-field"
                     placeholder="Номер телефона" required>
-                <input type="password" class="input-field" id="teahcer_pass" onkeyup="compareTeacher();"
+                <input type="password" class="input-field" name="password" id="teahcer_pass" onkeyup="compareTeacher();"
                     placeholder="Пароль" required>
                 <input type="password" class="input-field" id="teahcer_confirm" onkeyup="compareTeacher();"
                     placeholder="Подтверждение пароля" required>
