--- a/views/index.html
+++ b/views/index.html
@@ -122,8 +122,8 @@
             <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
                 onclick="closePopStud2()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button> 
                 <h4>Вы уверены что хотите удалить данное событие?</h4>
-        <button class="submit-yes" id="submit" type="button" onclick="remove(), closePopStud2()">Да</button>
-        <button class="submit" id="submit" type="button" onclick=" closePopStud2()">Нет</button> 
+        <button class="submit-yes" id="submit-yes" type="button" onclick=" closePopStud2YES()">Да</button>
+        <button class="submit" id="submit" type="button" onclick=" closePopStud2NO()">Нет</button> 
         </div>
     </div>
 
