--- a/views/events.html
+++ b/views/events.html
@@ -96,27 +96,8 @@
     <div class="popUp2" id="popStud2">
         <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
             onclick="closePopStud2()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button>
-            <div id="1" class="event">
-                <div class="time">10:00</div>
-                <div class="employerName">Алекандр Ли</div>
-                <div class="eventTitle">Выщипывание, Дастан</div>
-                <div class="delete">
-                    <button  class="" onclick="openPopStud()" >
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </button>
-                </div>
-            </div>
-            <div id="2" class="event">
-                <div class="time">11:00</div>
-                <div class="employerName">Рахат Би</div>
-                <div class="eventTitle">Стрижка, Даниил</div>
-                <div class="delete">
-                    <button  class="" onclick="openPopStud()" >
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </button>
-                </div>
-            </div>
-            <div id="3" class="event">
+            <div class="events">
+                    <!-- <div id="3" class="event">
                 <div class="time">12:00</div>
                 <div class="employerName">Мадина Ки</div>
                 <div class="eventTitle">Маникюр, Санжар</div>
@@ -125,7 +106,9 @@
                         <i class="fa-solid fa-circle-xmark"></i>
                     </button>
                 </div>
+            </div> -->
             </div>
+            
     </div>
 </div>
 
