--- a/views/events.html
+++ b/views/events.html
@@ -96,17 +96,18 @@
     <div class="popUp2" id="popStud2">
         <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
             onclick="closePopStud2()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button>
-            <div class="events">
-                    <!-- <div id="3" class="event">
-                <div class="time">12:00</div>
-                <div class="employerName">Мадина Ки</div>
-                <div class="eventTitle">Маникюр, Санжар</div>
-                <div class="delete">
-                    <button  class="" onclick="openPopStud()" >
-                        <i class="fa-solid fa-circle-xmark"></i>
-                    </button>
-                </div>
-            </div> -->
+            <div id="events">
+                <!-- <div id="3" class="event">
+                    <div class="time">12:00</div>
+                    <div class="employerName">Мадина Ки</div>
+                    <div class="eventTitle">Маникюр, Санжар</div>
+                    <div class="delete">
+                        <button  class="" onclick="openPopStud()" >
+                            <i class="fa-solid fa-circle-xmark"></i>
+                        </button>
+                    </div>
+                     </div>  -->
+                 
             </div>
             
     </div>
@@ -133,6 +134,7 @@
 <div id="modalBackDrop"></div>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="/public/js/fdb_config.js" id="MainScript"></script>
 <script src="/public/js/script_time_event.js"></script>
 <script src="/public/js/script_event.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
