--- a/views/index.html
+++ b/views/index.html
@@ -60,7 +60,7 @@
         </div>
     </nav>
     <!-------------------------------->
-    <form action="/addEvent" method="post">
+ 
     <div class="main">
         <div class="info">
 
@@ -74,7 +74,7 @@
                 <option class="option" value="Employee7">Employee7</option>
                 <option class="option" value="Employee8">Employee8</option>
             </select>
-            <div id="field" class="schedule">
+            <div id="events" class="schedule">
 
             </div>
             <div class="add">
@@ -115,8 +115,7 @@
                     <button class="submit" id="submit" type="submit" onclick="addEvent(), closePopStud()">Добавить</button>
         </div>
     </div>
-    </form>
-
+    
     <div class="popback2" id="opened2">
         <div class="popUp2" id="popStud2">
             <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
