--- a/views/index.html
+++ b/views/index.html
@@ -115,7 +115,7 @@
     <div class="popback2" id="opened2">
         <div class="popUp2" id="popStud2">
             <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
-                onclick="closePopStud2()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button> 
+                onclick="closePopStud2NO()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button> 
                 <h4>Вы уверены что хотите удалить данное событие?</h4>
         <button class="submit-yes" id="submit-yes" type="button" onclick=" closePopStud2YES()">Да</button>
         <button class="submit" id="submit" type="button" onclick=" closePopStud2NO()">Нет</button> 
@@ -144,8 +144,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="/public/js/fdb_config.js" id="MainScript"></script>
-    <script src="/public/js/script_time.js"></script>
     <script src="/public/js/script.js"></script>
+    <script src="/public/js/script_time.js"></script>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
