--- a/public/css/employers.css
+++ b/public/css/employers.css
@@ -127,6 +127,7 @@
 @media (max-width: 1440px) {
     .container {
         width: 98%;
+        padding: 0;
     }
 
     .icons {
@@ -173,7 +174,6 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto 50px auto;
-    width: fit-content;
 }
 
 .container .box {
@@ -238,6 +238,7 @@
 }
 .imgsearch{
     margin: 0 auto;
+    width: 100%;
     max-width: 800px;
     height: 90px;
     background: #fff;
