--- a/views/signUp.html
+++ b/views/signUp.html
@@ -24,7 +24,7 @@
             </div>
 
             <form action="/signUp" method="post" class="input-group">
-                <input type="text" class="input-field" placeholder="ФИО" required>
+                <input type="text" class="input-field" name="company_name" placeholder="Название компании" required>
                 <input type="email" class="input-field" name="email" placeholder="Электронная почта" required>
                 <input type="tel" name="tel" pattern="+7[0-9]{3}-[0-9]{3}-[0-9]{4}" class="input-field"
                     placeholder="Номер телефона" required>
