--- a/views/events.html
+++ b/views/events.html
@@ -51,7 +51,7 @@
                             <div class="dropdown-content">
 
                                 
-                                <a href="#">Выход</a>
+                                <a href="/signOut">Выход</a>
                             </div>
                         </div>
                     </div>
