--- a/views/employers.html
+++ b/views/employers.html
@@ -52,7 +52,7 @@
                             <div class="dropdown-content">
 
 
-                                <a href="#">Выход</a>
+                                <a href="/signOut">Выход</a>
                             </div>
                         </div>
                     </div>
