--- a/public/css/schedule.css
+++ b/public/css/schedule.css
@@ -10,7 +10,6 @@ body {
 @media (max-width:840px) {
   
   body{
-    width: 840px;
     zoom:45%;
   }
 }
@@ -28,7 +27,7 @@ body {
 }
 @media (max-width:840px) {
   .navbar{
-    width: 840px;
+
   }
 }
 .container {
@@ -573,7 +572,7 @@ body {
   font-family: sans-serif;
 }
 
-#eventTitleInput {
+.eventTitleInput {
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
@@ -583,6 +582,19 @@ body {
   border: none;
   box-shadow: 0px 0px 3px gray;
 }
+
+.text{
+  resize: none;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 25px;
+  border-radius: 3px;
+  outline: none;
+  border: none;
+  box-shadow: 0px 0px 3px gray;
+}
+
 
 #eventTitleInput.error {
   border: 2px solid red;
