--- a/views/employers.html
+++ b/views/employers.html
@@ -111,7 +111,7 @@
         <div class="popUp" id="popStud2">
             <button style="border: none; outline: none; background: none; margin-top: 5%; margin-left: 90%;"
                 onclick="closePopStud2()"><i class="fa-solid fa-circle-xmark" style="font-size: 30px;"></i></button>
-            <form action="/update_employee" method="post">
+            <form action="/update_employee" method="post" enctype="multipart/form-data">
             <div>
                 <label class="photo">
                     <img class="user_img" src="/public/images/user.svg" alt="">
